--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "This is a mini project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tailwindcss -i ./style.css -o ./dist/output.css --watch"
   },
-  "author": "",
+  "author": "Thariwa Umar",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.3.1"
